# opensourcecobol4j

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_JP.md  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.JP  README.md  README_JP.md  ReleaseNote.md  TODO  aclocal.m4  check-format  compile_libcobj.sh  config.h.in  configure  configure.ac  cpucheck.c  format  libcob.h  libcobj.h  opensourcecobol4j.sln  tarstamp.h  update-version.sh
cobj/: ChangeLog  Makefile.am  Makefile.in  check-format  cobj.c  cobj.h  codegen.c  config.c  config.def  cpp-check  error.c  field.c  flag-help.def  flag.def  format  parser.c  parser.h  parser.y  pplex.c  pplex.l  pplex.l.m4  ppparse.c  ppparse.h  ppparse.y  reserved.c  scanner.c  scanner.l  scanner.l.m4  system.def  tree.c  tree.h  typeck.c  warning-help.def  warning.def
config/: ChangeLog  Makefile.am  Makefile.in  boundary-limit.conf  default-en.conf  default-jp.conf  default.conf  jp-compat.conf  mf.conf
copy/: ChangeLog  Makefile.am  Makefile.in  screenio.cpy
lib/: ChangeLog  Makefile.am  Makefile.in  getopt.c  getopt.h  getopt1.c  gettext.h
libcob/: ChangeLog  Makefile.am  Makefile.in  byteswap.h  call.c  call.h  coblocal.h  codegen.h  common.c  common.h  fileio.c  fileio.h  intrinsic.c  intrinsic.h  move.c  move.h  numeric.c  numeric.h  screenio.c  screenio.h  strings.c  strings.h  termio.c  termio.h
libcobj/: .gitignore  Makefile  Makefile.am  Makefile.in  check-format  check-missing-javadoc.sh  compile.sh  format  settings.gradle.kts
libcobj/app/: build.gradle.kts
libcobj/config/: pmdRuleSet.xml  spotbugsFilter.xml
libcobj/src/: Cobjrun.java
tests/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  README_JP.md  atlocal.in  cobj-idx.at  command-line-options  command-line-options.at  commnad-line-options.at  data-rep  data-rep-O  data-rep.at  i18n_sjis  i18n_sjis.at  i18n_utf8  i18n_utf8.at  jp-compat  jp-compat.at  misc.at  package.m4  run  run-O  run.at  syntax  syntax.at
tests/cobj-idx.src/: help.at  info.at  load.at  misc.at  unload.at
tests/cobol85/: EXEC85.conf.in  IC.txt  IF.txt  IX.txt  Makefile.am  Makefile.in  NC.txt  OB.txt  README  README.md  RL.txt  SG.txt  SM.txt  SQ.txt  ST.txt  expand.pl  ifedit.sh  report.pl  summary.pl  summary.txt
tests/command-line-options.src/: B.at  C.at  E.at  Wcall-params.at  Wcolumn-overflow.at  Wconstant.at  Wimplicit-define.at  Wobsolete-Warchaic.at  Wparentheses.at  Wredefinition.at  Wstrict-typing.at  Wterminator.at  Wtruncate.at  Wunreachable.at  assign_external.at  conf.at  debug.at  edit-code-command.at  ext.at  fdefaultbyte-f-0.txt  fdefaultbyte-f-255.txt  fdefaultbyte-f-48.txt  fdefaultbyte-g-0.txt  fdefaultbyte-g-255.txt  fdefaultbyte-g-48.txt  fdefaultbyte.at  ffold-copy.at  ffunctions-all.at  file-path.at  fmfcomment.at  free.at  fserial-variable.at  fshort-variable.at  fsyntax-only.at  ftrace-ftraceall.at  ftraceall.at  fvar-name-hex.at  fvar-number.at  g.at  hello-world.at  (+8 more)
tests/data-rep.src/: binary.at  display.at  numeric-display.cob  numeric-dump.cob  packed.at  pointer.at
tests/i18n_sjis.src/: error-print.at  limits.at  mb-space.at  national.at  pic-n.at  pic-x.at  program-id.at  user-defined-word.at
tests/i18n_utf8.src/: error-print.at  limits.at  mb-space.at  national.at  pic-bn.at  pic-n.at  pic-x.at  program-id.at  stored-char-length.at  user-defined-word.at  warn-mixture-byte.at
tests/java_tmp/: FileLockTest.java  MoveAlphanumericToAlphanumeric.java  MoveAlphanumericToNational.java  MoveAlphanumericToNumeric.java  MoveAlphanumericToNumericPacked.java  MoveNumericBinaryToNumeric.java  MoveNumericBinaryToNumericPacked.java  MoveNumericPackedToAlphanumeric.java  MoveNumericPackedToNumeric.java  MoveNumericPackedToNumericPacked.java  MoveNumericToAlphanumeric.java  MoveNumericToNumericBinary.java  MoveNumericToNumericPacked.java  NumericBinaryTest.java  a.java  altkey.java  bin.java  c.java  cmppack.java  cmpuint.java  cob.java  cobdiv.java  d.java  fizzbuzz.java  iif.java  iifa.java  nmove.java  nvmove.java  packcompute.java  ptimes.java  puntil.java  pv.java  pvarying.java  rds.java  reads.java  s.java  samwrite.java  srch.java  tvmove.java  v.java  (+2 more)
tests/jp-compat.src/: abort-on-file-error.at  assign-devicename.at  catch-exception.at  cob68-copy.at  compat-check.at  copy-joining.at  copy-leading-trailing.at  data-desc-no-dot.at  empty-imperative.at  end-program-wrong.at  evaluate-also-missing.at  file-control.at  file-desc.at  file-userfh.at  greater-less-than-equal.at  intr-funcs.at  io-control.at  job-date.at  nibble-c-for-unsigned.at  occurs-param-order.at  search-key-in-rhs.at  sort-key-is.at  special-names.at  spl-registers.at  split-keys.at  switch-no-mnemonic.at  system-routine.at  upsi-x.at  verbose-runtime.at
tests/misc.src/: cancel-hyphen.at  comp-n.at  comp-overflow.at  comp3-compute.at  comp3-int.at  comp3-is-numeric.at  comp3-overflow.at  compare-9.at  compare-large-number.at  compare-national-diff-size.at  compare-national.at  compile-multiple-files.at  copy-comments.at  current-date.at  display-numeric.at  env.at  evaluate-switch.at  exit-perform-cycle.at  exit-perform.at  fd-external.at  high-low-value.at  index-comp.at  index-file-status.at  japanese-char-section-var.at  java-interface.at  move-sign-leading-separate-to-signed-comp3.at  read_prev_after_start.at  record-key-duplicates-error.at  signed-comp3.at  string-call-parameter.at  validate-indexed-file-keys.at  version-string-in-java.at
tests/run.src/: accept.at  extensions.at  functions.at  fundamental.at  initialize.at  misc.at  miscellaneous.at  ref-mod.at  return-code.at  subscripts.at
tests/syntax.src/: assign-external.at  copy.at  data-records.at  definition.at  error-recovery.at  expression.at  free-1col-aster.at  indicator.at  move.at  multiply.at  occurs.at  redefines.at  set.at  subscripts.at  unmatured-copy.at  value.at
vbisam/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  vbdecimal.h  vbisam.h
vbisam/docs/: DOCO  TODO  cisamdiff.txt  vbisamdoc.txt
(+803 files in other folders)
