#
# Makefile opencobol
# Process this file with automake to produce Makefile.in
#
# Copyright (C) 2003-2009 Keisuke Nishida
# Copyright (C) 2008-2011 Roger While
# Copyright (C) 2021-2022 TOKYO SYSTEM HOUSE Co., Ltd.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software; see the file COPYING.  If not, write to
# the Free Software Foundation, 51 Franklin Street, Fifth Floor
# Boston, MA 02110-1301 USA


bin_SCRIPTS =

include_HEADERS = libcobj.h

SUBDIRS = lib cobj bin config copy tests libcobj

ACLOCAL_AMFLAGS = -I m4
BUILT_SOURCES = defaults.h
DISTCLEANFILES = $(BUILT_SOURCES) cpucheck
EXTRA_DIST = cpucheck.c COPYING.DOC

distdir = $(PACKAGE)
dist-hook:
	echo "static char octardate[] = \"`date +'%b %d %Y %T %Z'`\";" > $(distdir)/tarstamp.h
	find $(distdir) -type d -print | xargs chmod 777
	chmod 644 $(distdir)/cpucheck.c
	chmod 644 $(distdir)/bin/cob-config.in
	chmod 644 $(distdir)/ABOUT-NLS
	chmod 644 $(distdir)/AUTHORS
	chmod 644 $(distdir)/COPYING
	chmod 644 $(distdir)/COPYING.DOC
	chmod 644 $(distdir)/COPYING.LIB
	chmod 644 $(distdir)/INSTALL
	chmod 644 $(distdir)/NEWS
	chmod 644 $(distdir)/README
	chmod 644 $(distdir)/THANKS
	chmod 644 $(distdir)/TODO
	chmod 755 $(distdir)/ltmain.sh
	chmod 755 $(distdir)/missing
	chmod 755 $(distdir)/install-sh
	chmod 755 $(distdir)/config.guess
	chmod 755 $(distdir)/config.sub
	chmod 755 $(distdir)/config.rpath
	chmod 755 $(distdir)/depcomp
	chmod 755 $(distdir)/mkinstalldirs
	touch $(distdir)/tests/run
	touch $(distdir)/tests/syntax
	touch $(distdir)/tests/data-rep

defaults.h: Makefile.am $(top_builddir)/config.status
	@echo "Creating defaults.h..."
	@{								\
	  echo "/* Automatically generated by Makefile */";		\
	  echo "#define COB_CC           \"$(COB_CC)\"";		\
	  echo "#define COB_CFLAGS       \"$(COB_CFLAGS)\"";		\
	  echo "#define COB_LDFLAGS      \"$(COB_LDFLAGS)\"";		\
	  echo "#define COB_LIBS         \"$(COB_LIBS)\"";		\
	  echo "#define COB_CONFIG_DIR   \"$(COB_CONFIG_DIR)\"";	\
	  echo "#define COB_COPY_DIR     \"$(COB_COPY_DIR)\"";		\
	  echo "#define COB_LIBRARY_PATH \"$(COB_LIBRARY_PATH)\"";	\
	  echo "#define COB_MODULE_EXT   \"$(COB_MODULE_EXT)\"";	\
	  echo "#define LOCALEDIR        \"$(datadir)/locale\"";	\
	} > defaults.h

test-cobj-api:
	$(MAKE) -C libcobj test